--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file=README.md
 # don't learn it if you don't know it, it takes some time, django test runner is fine
 # ANSWER: I used pytest to check flake8 and isort error, just do `pytest`
 [tool:pytest]
-addopts = --isort -rs --flake8 --durations=10 --reuse-db --tb=short
+addopts = -rs --flake8 --durations=10 --reuse-db --tb=short
 DJANGO_SETTINGS_MODULE = conf.settings.test
 python_files = tests.py test_*.py *_tests.py
 
