Add coinbase, bitstamp integration

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,9 @@ pytest = "*"
 pytest-django = "*"
 "pytest-flake8" = "*"
 djangorestframework-simplejwt = "==3.2.3"
+coinbase = "==2.1.0"
+django-redis = "==4.9.0"
+bitstampclient = "==2.2.5"
 
 [dev-packages]
 "flake8" = "*"
