--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ python:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_f46fd4646bd0_key -iv $encrypted_f46fd4646bd0_iv -in deployments.tar.enc -out deployments.tar -d
+  - tar xvf deployments.tar
+  - gcloud version || true
+  - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export
+    CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - gcloud version
+  - gcloud components install kubectl || true
   - pip install pipenv
 
 install:
