--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,7 @@ coinaddr = "*"
 sendgrid = "*"
 slackclient = "*"
 django-tinymce = "==2.7.0"
+django-rest-swagger = "*"
 
 [dev-packages]
 "flake8" = "*"
