--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ django-tinymce = "==2.7.0"
 django-rest-swagger = "*"
 twilio = "*"
 redis = "==2.10.6"
+pyotp = "==2.2.7"
 
 [dev-packages]
 "flake8" = "*"
