--- a/Pipfile
+++ b/Pipfile
@@ -14,8 +14,8 @@ factory-boy = "==2.11.1"
 drf-extensions = "==0.3.1"
 django-cors-headers = "==2.3.0"
 pytz = "==2018.5"
-mysqlclient = "==1.3.13"
-pymysql = "==0.9.2"
+#mysqlclient = "==1.3.13"
+#pymysql = "==0.9.2"
 requests = "==2.18.4"
 sentry-sdk = "*"
 gunicorn = "==19.9.0"
