--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ django-cors-headers = "==2.3.0"
 pytz = "==2018.5"
 mysqlclient = "==1.3.13"
 pymysql = "==0.9.2"
-requests = "==2.18.4"
+requests = "==2.21.0"
 sentry-sdk = "*"
 gunicorn = "==19.9.0"
 pytest = "*"
@@ -37,6 +37,7 @@ redis = "==2.10.6"
 pyotp = "==2.2.7"
 google-cloud-storage = "==1.13.0"
 python-binance = "==0.7.0"
+"urllib3" = "==1.24.1"
 
 [dev-packages]
 "flake8" = "*"
