--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==2.1.3"
-django-extensions = "==2.0.7"
+django = "==2.1.4"
+django-extensions = "==2.1.4"
 djangorestframework = "==3.9.0"
 django-model-utils = "==3.1.2"
-pillow = "==5.0.0"
+pillow = "==5.3.0"
 django-filter = "==2.0.0"
 factory-boy = "==2.11.1"
-drf-extensions = "==0.3.1"
-django-cors-headers = "==2.3.0"
+drf-extensions = "==0.4.0"
+django-cors-headers = "==2.4.0"
 pytz = "==2018.5"
-mysqlclient = "==1.3.13"
+mysqlclient = "==1.3.14"
 pymysql = "==0.9.2"
 requests = "==2.21.0"
 sentry-sdk = "*"
@@ -22,9 +22,9 @@ gunicorn = "==19.9.0"
 pytest = "*"
 pytest-django = "*"
 "pytest-flake8" = "*"
-djangorestframework-simplejwt = "==3.2.3"
+djangorestframework-simplejwt = "==3.3"
 coinbase = "==2.1.0"
-django-redis = "==4.9.0"
+django-redis = "==4.10.0"
 bitstampclient = "==2.2.5"
 python-memcached = "*"
 coinaddr = "*"
@@ -38,6 +38,7 @@ pyotp = "==2.2.7"
 google-cloud-storage = "==1.13.0"
 python-binance = "==0.7.0"
 "urllib3" = "==1.24.1"
+coverage = "==4.5.2"
 
 [dev-packages]
 "flake8" = "*"
