--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,7 @@ google-cloud-storage = "==1.13.0"
 python-binance = "==0.7.0"
 "urllib3" = "==1.24.1"
 coverage = "==4.5.2"
+"web3" = "*"
 
 [dev-packages]
 "flake8" = "*"
