--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - source /home/travis/google-cloud-sdk/path.bash.inc
   - gcloud version
   - gcloud components install kubectl || true
-  - pip install pipenv
+  - pip install pipenv==2018.11.26
 
 install:
   - pipenv install --system --deploy
